# batteries_hydro_quebec_resolution_pb_industriel

./: .gitignore  01_eda.py  02_battery_deepdive.py  README.md  batteries_hydro_quebec_resolution_pb_industriel.md  lost_slow_detections.csv  merge_batteries.py  predictor_models.py  pyproject.toml
.ai/: contribution-battery_deepdive_notebook.md  contribution-fusion_batteries_hq.md  contribution-notebook_eda_batteries_hydro_quebec_filtrage_bruit.md
